# fred-samples

./: .dockerignore  .gitignore  README.md
agents/: Makefile  pyproject.toml
agents/config/: configuration.yaml  env.template  mcp_catalog.yaml  models_catalog.yaml
agents/fred_samples_agents/: __init__.py  __main__.py  general_assistant.py  main.py  registry.py
agents/fred_samples_agents/bank_transfer/: graph_agent.py  graph_state.py  graph_steps.py
agents/fred_samples_agents/postal_tracking/: graph_agent.py  graph_state.py  graph_steps.py
dockerfiles/: Dockerfile  README.md
servers/: README.md
servers/mcp/python/bank_core_mcp_server/: Makefile  README.md
servers/mcp/python/bank_core_mcp_server/bank_core_mcp_server/: __init__.py  server_mcp.py
servers/mcp/python/iot-tracking-mcp-server/: Makefile  README.md
servers/mcp/python/iot-tracking-mcp-server/iot_tracking_mcp_server/: server_mcp.py
servers/mcp/python/minimal-mcp-server/: Makefile  README.md
servers/mcp/python/minimal-mcp-server/minimal_mcp_server/: main.py  server_mcp.py
servers/mcp/python/postal-service-mcp-server/: Makefile  README.FR.md
servers/mcp/python/postal-service-mcp-server/postal_service_mcp_server/: server_mcp.py
servers/mcp/python/risk_guard_mcp_server/: Makefile  README.md
servers/mcp/python/risk_guard_mcp_server/risk_guard_mcp_server/: __init__.py  server_mcp.py
