[project]
name = "fred-samples-agents"
version = "0.1.0"
description = "Fred sample agent pod — bank transfer and postal tracking with HITL"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
  "fred-sdk>=0.1.4",
  "fred-runtime[app]>=0.1.12",
  "uvicorn>=0.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.12.5",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fred_samples_agents*"]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.12.5",
]
